--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -8,4 +8,11 @@ editor_options:
   chunk_output_type: console
 ---
 
-Welcome to my research website.
+### Quality control. 
+quality control of individual samples
+[link](QualityControl.html)
+
+### HumanAneurysm. 
+merge data HumanAneurysm and display umaps and feature plots
+[link](HumanAneurysm.html)
+
